--- a/Basic-Knowledge/Basic-knowledge-of-Android/View/事件分发机制.md
+++ b/Basic-Knowledge/Basic-knowledge-of-Android/View/事件分发机制.md
@@ -1,5 +1,5 @@
 ### Ref：[郭霖-事件分发机制解析-上](http://blog.csdn.net/guolin_blog/article/details/9097463/)
-### Ref: [郭霖-事件分发机制解析-上](http://blog.csdn.net/guolin_blog/article/details/9153747)
+### Ref: [郭霖-事件分发机制解析-下](http://blog.csdn.net/guolin_blog/article/details/9153747)
 
 ### 收获和心得整理：
 ###### PS：以下仅是类似读书笔记的个人愚见！
@@ -8,7 +8,7 @@
 > onTouch方法执行在onClick方法之前，
 > 实际上，onClick方法是包含在onTouch中的一个子方法
 > 在onTouch中的return值可以控制触摸事件是否被消费掉，true被消费，false不消费
-2.	onTouch方法的执行过程
+> *	onTouch方法的执行过程
 > 只要一个控件被触摸，就会调用该控件的dispatchTouchEvent方法
 
 ` public boolean dispatchTouchEvent(MotionEvent event) {`  
