--- a/Basic-Knowledge/Basic-knowledge-of-Android/View/事件分发机制.md
+++ b/Basic-Knowledge/Basic-knowledge-of-Android/View/事件分发机制.md
@@ -1,4 +1,4 @@
-### Ref：[郭霖-事件分发机制解析-上](http://blog.csdn.net/guolin_blog/article/details/9097463/)
+### Ref: [郭霖-事件分发机制解析-上](http://blog.csdn.net/guolin_blog/article/details/9097463/)
 ### Ref: [郭霖-事件分发机制解析-下](http://blog.csdn.net/guolin_blog/article/details/9153747)
 
 ### 收获和心得整理：
