--- a/QuestionAndSolution/触摸事件监听无法响应.md
+++ b/QuestionAndSolution/触摸事件监听无法响应.md
@@ -5,7 +5,7 @@
 * 通过LOG调试知晓，对比距离会有很小的几率出现相等的情况，这种时候判断会失去依据
 * 最主要的原因：一个控件对于触摸事件的监听，仅限于它的试图范围内！！ 当操作的区域超出了监听的区域，触摸事件的监听就会失去效果。
 
-###### 原本是个很简单的道理，但陷入了思维误区，一直想不明白！
+##### 原本是个很简单的道理，但陷入了思维误区，一直想不明白！
 
-###### 警醒：遇到无法解决的问题，盲目调试和修改是没有意义的，要去追溯实现的原理，一步一步类推，层层剖析，才能更快更有效率地找到原因，
-###### 而且这样还能熟悉知识点，这种方法和思维方式需要自己有意思地培养
+##### 警醒：遇到无法解决的问题，盲目调试和修改是没有意义的，要去追溯实现的原理，一步一步类推，层层剖析，才能更快更有效率地找到原因，
+##### 而且这样还能熟悉知识点，这种方法和思维方式需要自己有意思地培养
