--- a/QuestionAndSolution/触摸事件监听无法响应.md
+++ b/QuestionAndSolution/触摸事件监听无法响应.md
@@ -2,8 +2,8 @@
 
 ### 具体做法：
 ##### 对一个Framelayout设置触摸监听事件，并根据触摸信息对其进行缩放，但在缩放过程中，会出现无法响应的情况，
-* 通过LOG调试知晓，对比距离会有很小的几率出现相等的情况，这种时候判断会失去依据
-* 最主要的原因：一个控件对于触摸事件的监听，仅限于它的试图范围内！！ 当操作的区域超出了监听的区域，触摸事件的监听就会失去效果。
+> * 通过LOG调试知晓，对比距离会有很小的几率出现相等的情况，这种时候判断依据会失去效果，经过调整可以避免
+> * 最主要的原因：一个控件对于触摸事件的监听，仅限于它的试图范围内！！ 当操作的区域超出了监听的区域，触摸事件的监听就会失去效果。
 
 ##### 原本是个很简单的道理，但陷入了思维误区，一直想不明白！
 
