--- a/Basic-Knowledge/Android-Framework-and-operation-mechanism/关于内存泄漏.md
+++ b/Basic-Knowledge/Android-Framework-and-operation-mechanism/关于内存泄漏.md
@@ -1,3 +1,5 @@
+#### REF：[找到了更好的详述内存泄漏的文章](https://github.com/GeniusVJR/LearningNotes/blob/master/Part1/Android/Android%E5%86%85%E5%AD%98%E6%B3%84%E6%BC%8F%E6%80%BB%E7%BB%93.md)
+
 ### 什么内存泄漏？
 * Android程序内部存在内存回收机制，在不断地进行程序操作时，内存不断地被创建和回收，通过这种模式保证了程序运行的效率
 * 而内存泄漏就是原本失去意义应该被回收和释放的内存没有被回收，一直占有程序固有的内存空间。
