--- a/Basic-Knowledge/Android-Framework-and-operation-mechanism/关于内存泄漏.md
+++ b/Basic-Knowledge/Android-Framework-and-operation-mechanism/关于内存泄漏.md
@@ -22,5 +22,5 @@
 
 > 引申出来需要具体学习的模块：
 > * 静态方法实现弱引用
-> * AS中分析内存泄漏方法
+> * [AS中分析内存泄漏方法](http://www.jianshu.com/p/c49f778e7acf)
 > * 熟悉各项对象是否需要手动注销和释放
