--- a/Basic-Knowledge/Android-Framework-and-operation-mechanism/关于内存泄漏.md
+++ b/Basic-Knowledge/Android-Framework-and-operation-mechanism/关于内存泄漏.md
@@ -21,6 +21,6 @@
 ##### 根本理念：合理设计程序对象的运行周期和运行区域，严格按照数据对象的操作方法，即时注销和销毁无用的对象（不能出现被引用的对象不能出现被销毁了引用对的相关操作还没有执行完毕的情况）
 
 > 引申出来需要具体学习的模块：
-> * 静态方法实现弱引用
+> * [静态方法实现弱引用](http://blog.csdn.net/watermusicyes/article/details/45898793)
 > * [AS中分析内存泄漏方法](http://www.jianshu.com/p/c49f778e7acf)
 > * 熟悉各项对象是否需要手动注销和释放
