--- a/Basic-Knowledge/Android-Framework-and-operation-mechanism/关于内存泄漏.md
+++ b/Basic-Knowledge/Android-Framework-and-operation-mechanism/关于内存泄漏.md
@@ -10,10 +10,8 @@
 #### 根本原因：内存数据一直被某个或某些实例引用，导致了GC不能对其回收，造成内存泄漏
 * 出现情形：
 * 1. 长生命周期的对象静态引用了短周期的对象，但短周期的对象销毁后，依然被长周期的对象引用，即造成内存泄漏
-* 2. 为了保证数据的唯一性和单例性，使用非静态内部类在外部类中创建其静态实例，这样一来该内部类的实例对象就成为一个全周期
-*   实例对象，也就是说在外部类中创建的静态内部类实例会一直持有外部类（eg:Activity）的引用，该外部类就会不能正常的回收
-* 3.线程操作不同步，在Activity中新建一个线程执行任务，这个线程会持有该Activity的隐式引用，如果Activity被销毁，而线程任务没有执行完毕
-*   则该线程会一直持有该Activity的引用，系统无法回收该Activity的资源
+* 2. 为了保证数据的唯一性和单例性，使用非静态内部类在外部类中创建其静态实例，这样一来该内部类的实例对象就成为一个全周期实例对象，也就是说在外部类中创建的静态内部类实例会一直持有外部类（eg:Activity）的引用，该外部类就会不能正常的回收
+* 3.线程操作不同步，在Activity中新建一个线程执行任务，这个线程会持有该Activity的隐式引用，如果Activity被销毁，而线程任务没有执行完毕,则该线程会一直持有该Activity的引用，系统无法回收该Activity的资源
 * 4.Handler机制在不断轮询的过程中，如果Activity被销毁，但消息队列中还有未执行完毕的消息，那么该消息队列就会一直持有Activity的应用，无法回收
 * 5.对于BraodcastReceiver,ContentProvider,File,IO流，Cursor等需要手动关闭和注销的对象，如果没有即时销毁和注销，否则这些对象将不会回收
 
