--- a/Basic-Knowledge/Independent-module/屏幕适配原理和方法.md
+++ b/Basic-Knowledge/Independent-module/屏幕适配原理和方法.md
@@ -1,1 +1,31 @@
+### [屏幕适配全攻略-世界是我的床（简书作者）](http://www.jianshu.com/p/6319e43572fa)
 
+#### 个人笔记：
+> * dip：Density Independent Pixels（密度无关像素）的缩写。以160dpi为基准，1dp=1px
+> * dp：同dip
+> * dpi：屏幕像素密度的单位，“dot per inch”的缩写
+> * px：像素，物理上的绝对单位
+> * sp：Scale-Independent Pixels的缩写，可以根据文字大小首选项自动进行缩放。Google推荐我们使用12sp以上的大小，通常可以使用12sp，14sp，18sp，22sp，最好不要使用奇数和小数。
+
+##### 总结：
+> * 屏幕适配就是希望通过一些合理的设计摆放计算规则，使得一套UI设计能够在各种不同分辨率的屏幕上呈现相同的显示效果
+> * 实现屏幕适配的途径是借助像素密度（DPI），任何设备有确定的物理屏幕尺寸和分辨率大小，不同的尺寸和分辨率的设备通过反向计算DIP/DP即能实现
+> * 计算规则：DP/DIP以160DPI为基础，此时 1DP=1PX，然后不同的DPI的值对DP对应的像素值按照 适配设备的DPI值/160×DP值=适配设备上的实际像素值 
+
+##### 适配的简单方法：
+> * 按照总结说的设计DP的值，依据不同设备的DPI的值转换成对应的设备情况的像素值，完成UI适配
+> * 使用layout_weight值按比例分割空间，结合固定DP值的方法
+> * layout_weight值计算方法：
+> 对于统一宽高空间的控件设置layout_weight值，以父容器的宽度为例，例如：layout_weight=“1”；layout_weight=“2”；
+
+> 那么父容器的宽度会被分割成均等三份，layout_weight=“1”的控件占据1/3，layout_weight=“2”的控件占据2/3，（前提：这两个控件的宽度要设置为0）
+
+> 因为权重分割的计算方法为：所占宽度=原来宽度+剩余空间所占百分比的宽度
+
+> 当两个控件宽度设置为0 DP时计算公式：0+L（1/（1+2））=1/3L
+
+> 当两个控件的宽度设置为充满父容器时，计算公式会变成：L + (L-(L+L))*(1/(1+2))= L - L/3 = 2/3L 
+
+> *以上的两种不同的结果，可以看出，我们一定要注意正确的理解和运用公式，否则会出现完全无法理解的情况！*
+
+##### 9.patch 已基本熟悉和理解运用，相当熟练，仅作记载
