--- a/Basic-Knowledge/Independent-module/屏幕适配原理和方法.md
+++ b/Basic-Knowledge/Independent-module/屏幕适配原理和方法.md
@@ -15,9 +15,9 @@
 ##### 适配的简单方法：
 > * 按照总结说的设计DP的值，依据不同设备的DPI的值转换成对应的设备情况的像素值，完成UI适配
 > * 使用layout_weight值按比例分割空间，结合固定DP值的方法
-> * layout_weight值计算方法：
-> 对于统一宽高空间的控件设置layout_weight值，以父容器的宽度为例，例如：layout_weight=“1”；layout_weight=“2”；
 
+##### layout_weight值计算方法：
+> 对于统一宽高空间的控件设置layout_weight值，以父容器的宽度为例，例如：layout_weight=“1”；layout_weight=“2”；
 > 那么父容器的宽度会被分割成均等三份，layout_weight=“1”的控件占据1/3，layout_weight=“2”的控件占据2/3，（前提：这两个控件的宽度要设置为0）
 
 > 因为权重分割的计算方法为：所占宽度=原来宽度+剩余空间所占百分比的宽度
