--- a/Basic-Knowledge/Independent-module/屏幕适配原理和方法.md
+++ b/Basic-Knowledge/Independent-module/屏幕适配原理和方法.md
@@ -22,9 +22,9 @@
 
 > 因为权重分割的计算方法为：所占宽度=原来宽度+剩余空间所占百分比的宽度
 
-> 当两个控件宽度设置为0 DP时计算公式：0+L（1/（1+2））=1/3L
+> 当两个控件宽度设置为0 DP，而对于layout_wight=1的控件对应的计算公式为：0+L（1/（1+2））=1/3L
 
-> 当两个控件的宽度设置为充满父容器时，计算公式会变成：L + (L-(L+L))*(1/(1+2))= L - L/3 = 2/3L 
+> 当两个控件的宽度设置为充满父容器时，对于layout_wight=1的控件对应的计算公式会变成：L + (L-(L+L))*(1/(1+2))= L - L/3 = 2/3L 
 
 > *以上的两种不同的结果，可以看出，我们一定要注意正确的理解和运用公式，否则会出现完全无法理解的情况！*
 
