--- a/Basic-Knowledge/Independent-module/屏幕适配原理和方法.md
+++ b/Basic-Knowledge/Independent-module/屏幕适配原理和方法.md
@@ -29,3 +29,20 @@
 > *以上的两种不同的结果，可以看出，我们一定要注意正确的理解和运用公式，否则会出现完全无法理解的情况！*
 
 ##### 9.patch 已基本熟悉和理解运用，相当熟练，仅作记载
+
+#### 软件自适应用户界面的方法：
+> * 1.根据使用设备的参数信息设计程序执行入口，每次执行之前进行判断，确保选择使用合适的用户界面参数，
+
+> 这种方法需要在代码中添加很多冗长的环节和逻辑
+
+> * 2.使用工厂模式，先为各种情况下的UI界面设计好相应的参数信息，然后在执行程序的时候判断设备类型，加载对应的参数，完成适配
+
+> 这种方法在于编写各种对应的参数文档比较繁琐，但在程序设计的时候，相当简单
+
+
+###### 适配UI的时候，有一个问题需要特别关注：UI界面多数需要提供图片和背景素材，然而图片会占用很大的内存，很不利于APP轻量化和瘦身
+> * 一张图片可以用来适配所有的屏幕密度情况，但是每种图片对应的屏幕密度规格各有不同
+> * 以Nexus5为例，如果我们把图片放在drawable-xxhdpi下，占用的内存最小（10M+），如果放在drawable或drawable-mdpi下，占用的内存将会非常大（75M+）。如果放在drawable-hdpi下占用的为35M+（同一张图片）
+> * 所以，我们可以根据需要提供不同尺寸的图片，用来适配不同的屏幕密度，避免造成很大程度上浪费内存。
+
+####### PS：不同的DPI图片会在适配时有不同的显示效果，但简单的轻量化无法满足UI设计需求时，有必要放弃小内存图片
