--- a/Basic-Knowledge/Independent-module/屏幕适配原理和方法.md
+++ b/Basic-Knowledge/Independent-module/屏幕适配原理和方法.md
@@ -45,4 +45,12 @@
 > * 以Nexus5为例，如果我们把图片放在drawable-xxhdpi下，占用的内存最小（10M+），如果放在drawable或drawable-mdpi下，占用的内存将会非常大（75M+）。如果放在drawable-hdpi下占用的为35M+（同一张图片）
 > * 所以，我们可以根据需要提供不同尺寸的图片，用来适配不同的屏幕密度，避免造成很大程度上浪费内存。
 
-####### PS：不同的DPI图片会在适配时有不同的显示效果，但简单的轻量化无法满足UI设计需求时，有必要放弃小内存图片
+###### PS：不同的DPI图片会在适配时有不同的显示效果，但简单的轻量化无法满足UI设计需求时，有必要放弃小内存图片
+
+
+### 使得一套UI设计参数能够在所有设备显示出同样的效果的方法：
+> * 1.获取设备的分辨率大小，设定自定义的宽高大小，例如：320X480 （无单位），仅仅代表将设备的像素值均分的份数
+> * 2.设计算法，根据设备的分辨率按照自定义的宽高大小均等分割像素值，获取到自定义大小所代表的实际像素值
+> * 3.我们根据像素值的大小来设计UI界面，使得我们给出的大小在实际的设备上都是占有的百分比大小，这样就能适应所有的设备界面
+
+##### 这种办法其实就是DP值适配的原理，对于标准的DPI屏幕，没有必要再自行设计，但是这种思路可以用来实现一些并非标准DPI的屏幕的适配，是一个用来解决偏门问题的备用选项
