--- a/Basic-Knowledge/Basic-knowledge-of-Android/Android-Internet-Programming/网络基本知识.md
+++ b/Basic-Knowledge/Basic-knowledge-of-Android/Android-Internet-Programming/网络基本知识.md
@@ -1,1 +1,35 @@
+### REF:[Android网络编程（一）HTTP协议原理 - 刘望舒](http://blog.csdn.net/itachi85/article/details/50982995)
 
+### 个人笔记：
+#### http的特点：
+* C/S模式
+* 通过GET,HEAD,POST等方法向服务器发送请求，这些方法各自拥有不同的特点和用途
+* 可以传输任何类型的对象，通过Content-Type标记
+* http响应是限制每次连接只处理一个请求，完成交互即自动断开连接，这样的方式非常节省服务器的效率和传输时间
+* http协议对于事物处理没有记忆能力，缺少状态意味着如果后续处理需要前面的信息，则它必须重传，这样可能导致每次连接传送的数据量增大。另一方面，在服务器不需要先前信息时它的应答就较快
+
+#### http URL格式及其代表的含义
+`http://host[":"port][abs_path]`  
+* http 表示使用http协议来处理网络资源
+* host 表示Internet主机域名或者IP地址
+* post 表示一个端口号，为空则使用默认端口80
+* abs_path 表示请求资源的URI（Web上任意的可用资源）。 
+
+#### 在http协议中有两种报文，请求报文和响应报文，用途非常明显
+* 请求报文
+![请求报文的一般格式](http://img.blog.csdn.net/20160326141150626)
+> 如图所示，请求报文包括 请求行，请求报头，空行，请求数据 四个部分
+
+> 请求行的格式： Method Request-URI HTTP-Version CRLF
+
+> Method表示请求方法；Request-URI是资源标识符；HTTP-Version表示请求的HTTP协议版本；CRLF表示回车和换行
+> > HTTP请求方法有8种,分别是GET、POST、DELETE、PUT、HEAD、TRACE、CONNECT 、OPTIONS。其中PUT、DELETE、POST、GET分别对应着增删改查，对于移动开发最常用的就是POST和GET
+> > * 1.GET：请求获取Request-URI所标识的资源
+> > * 2.POST：在Request-URI所标识的资源后附加新的数据
+> > * 3.HEAD 请求获取由Request-URI所标识的资源的响应消息报头
+> > * 4.PUT 请求服务器存储一个资源，并用Request-URI作为其标识
+> > * 5.DELETE 请求服务器删除Request-URI所标识的资源
+> > * 6.TRACE 请求服务器回送收到的请求信息，主要用于测试或诊断
+> > * 7.CONNECT 保留将来使用
+> > * 8.OPTIONS 请求查询服务器的性能，或者查询与资源相关的选项和需求
+> > * eg : GET http://blog.csdn.net/itachi85 HTTP/1.1
