--- a/Basic-Knowledge/Basic-knowledge-of-Android/Android-Internet-Programming/网络基本知识.md
+++ b/Basic-Knowledge/Basic-knowledge-of-Android/Android-Internet-Programming/网络基本知识.md
@@ -34,4 +34,4 @@
 > > * 6.TRACE 请求服务器回送收到的请求信息，主要用于测试或诊断
 > > * 7.CONNECT 保留将来使用
 > > * 8.OPTIONS 请求查询服务器的性能，或者查询与资源相关的选项和需求
-> > * eg : GET http://blog.csdn.net/itachi85 HTTP/1.1
+> > * eg : GET http://github.com HTTP/1.1
