--- a/Basic-Knowledge/Basic-knowledge-of-Android/Android-Internet-Programming/网络基本知识.md
+++ b/Basic-Knowledge/Basic-knowledge-of-Android/Android-Internet-Programming/网络基本知识.md
@@ -1,6 +1,8 @@
-### REF:[Android网络编程（一）HTTP协议原理 - 刘望舒](http://blog.csdn.net/itachi85/article/details/50982995)
+#### REF:[Android网络编程（一）HTTP协议原理 - 刘望舒](http://blog.csdn.net/itachi85/article/details/50982995)
+#### REF:[Https相关完全解析 当OkHttp遇到Https - hongyang](http://blog.csdn.net/lmj623565791/article/details/48129405)
 
 ### 个人笔记：
+-------------------------------------
 #### http的特点：
 * C/S模式
 * 通过GET,HEAD,POST等方法向服务器发送请求，这些方法各自拥有不同的特点和用途
@@ -22,6 +24,8 @@
 
 > 如图所示，请求报文包括 请求行，请求报头，空行，请求数据 四个部分
 
+
+##### 请求行
 > 请求行的格式： Method Request-URI HTTP-Version CRLF
 
 > Method表示请求方法；Request-URI是资源标识符；HTTP-Version表示请求的HTTP协议版本；CRLF表示回车和换行
@@ -35,3 +39,34 @@
 > > * 7.CONNECT 保留将来使用
 > > * 8.OPTIONS 请求查询服务器的性能，或者查询与资源相关的选项和需求
 > > * eg :  `GET http://github.com HTTP/1.1`  
+
+##### 请求报头
+> * 在请求行之后会有0个或者多个请求报头，每个请求报头都包含一个名字和一个值，它们之间用“：”分割。请求头部会以一个空行，发送回车符和换行符，通知服务器以下不会有请求头
+
+##### 请求数据
+> * 请求数据不在GET方法中使用，而是在POST方法中使用。POST方法适用于需要客户填写表单的场合，与请求数据相关的最常用的请求头是Content-Type和Content-Length
+
+#### 响应报文:服务器对特定请求返回的数据内容
+![http响应报文](http://img.blog.csdn.net/20160327135121539)
+
+> 类似请求报文，HTTP的响应报文由状态行、消息报头、空行、响应正文组成
+
+> 状态行格式：`HTTP-Version Status-Code Reason-Phrase CRLF`  
+> > * HTTP-Version表示服务器HTTP协议的版本
+> > * Status-Code表示服务器发回的响应状态代码
+> > * Reason-Phrase表示状态代码的文本描述
+> > 
+> > * 状态码的可能取值及代表含义：
+> > * •100~199：指示信息，表示请求已接收，继续处理
+> > * •200~299：请求成功，表示请求已被成功接收、理解、接受  （常用200）
+> > * •300~399：重定向，要完成请求必须进行更进一步的操作   
+> > * •400~499：客户端错误，请求有语法错误或请求无法实现    （常用400）
+> > * •500~599：服务器端错误，服务器未能实现合法的请求       
+> > * 成功的请求行, eg:`HTTP/1.1 200 OK`  
+
+> 具体的网络数据响应内容可在REF中的博客具体查看
+> 自行操作则参考：[trinea-Android利用Fiddler对网络数据进行抓包](http://www.trinea.cn/android/android-network-sniffer/)
+
+---------------------------------
+#### 移动端的网络交互手段
+
