--- a/Basic-Knowledge/Basic-knowledge-of-Android/Android-Internet-Programming/网络基本知识.md
+++ b/Basic-Knowledge/Basic-knowledge-of-Android/Android-Internet-Programming/网络基本知识.md
@@ -1,4 +1,4 @@
-#### REF:[Android网络编程（一）HTTP协议原理 - 刘望舒](http://blog.csdn.net/itachi85/article/details/50982995)
+#### REF:[Android网络编程（一，二，三）HTTP协议原理 - 刘望舒](http://blog.csdn.net/itachi85/article/details/50982995)
 #### REF:[Https相关完全解析 当OkHttp遇到Https - hongyang](http://blog.csdn.net/lmj623565791/article/details/48129405)
 
 ### 个人笔记：
@@ -68,5 +68,11 @@
 > 自行操作则参考：[trinea-Android利用Fiddler对网络数据进行抓包](http://www.trinea.cn/android/android-network-sniffer/)
 
 ---------------------------------
-#### 移动端的网络交互手段
+#### Android中的网络请求交互实现方法：
+* httpClient   (在6.0中被删除，要继续使用可以采用库文件依赖的方法进行)
+* HttpUrlConnection    
+* Volley  适用于高频率，短时间，小流量的网络访问，不能用来进行下载文件这种长时间，大数据量的网络交互  
+* okhttp/retrofit  
+
+#### 
 
