--- a/Basic-Knowledge/Basic-knowledge-of-Android/Android-Internet-Programming/网络基本知识.md
+++ b/Basic-Knowledge/Basic-knowledge-of-Android/Android-Internet-Programming/网络基本知识.md
@@ -1,5 +1,6 @@
 #### REF:[Android网络编程（一，二，三）HTTP协议原理 - 刘望舒](http://blog.csdn.net/itachi85/article/details/50982995)
-#### REF:[Https相关完全解析 当OkHttp遇到Https - hongyang](http://blog.csdn.net/lmj623565791/article/details/48129405)
+#### REF:[http/https的区别](http://www.cnblogs.com/wxlzhizu/archive/2009/12/09/1620005.html)
+#### REF:[okhttp访问https站点的安全验证详解 - hongyang](http://blog.csdn.net/lmj623565791/article/details/48129405)
 
 ### 个人笔记：
 -------------------------------------
@@ -73,6 +74,11 @@
 * HttpUrlConnection    
 * Volley  适用于高频率，短时间，小流量的网络访问，不能用来进行下载文件这种长时间，大数据量的网络交互  
 * okhttp/retrofit  
+> * Android中多半是用的网络请求方法，只有GET，POST
+> * Volley 是内部封装了一个网络访问请求队列，我们只要将访问操作添加进请求队列就能自动访问，网络访问的种类包括String,Json,Image等
+> * [Volley 全解析](http://blog.csdn.net/itachi85/article/details/51043704)
+> * ImageLoader是另一个封装好的的图片请求工具
 
-#### 
+
+
 
