--- a/Basic-Knowledge/Basic-knowledge-of-Android/Android-Internet-Programming/网络基本知识.md
+++ b/Basic-Knowledge/Basic-knowledge-of-Android/Android-Internet-Programming/网络基本知识.md
@@ -83,6 +83,7 @@
 
 > * ImageLoader是另一个封装好的的图片请求工具
 
+> * [OKHTTP 使用教学](http://blog.csdn.net/lmj623565791/article/details/47911083)               
+> * [RETROFIT 使用教学](http://www.jianshu.com/p/eb5d03085926)
 
-
-
+> * [各种网络框架的对比]()
