--- a/Basic-Knowledge/Independent-module/多线程编程.md
+++ b/Basic-Knowledge/Independent-module/多线程编程.md
@@ -1,17 +1,19 @@
 ### 多线程编程的实现工具：
-> * Thread,Runable 
+> * Thread,Runable 此方法是其他方法的基础和原理，任何有关线程操作的封装类和框架都是通过内部操作Thread对象来实现的
 > * Asynctask [Asynctask的使用-自己的博客](http://www.cnblogs.com/thinfog/p/5648312.html)
 > * Handler,looper,MeasageQueue [Android异步消息机制-郭霖](http://blog.csdn.net/guolin_blog/article/details/9991569)
 
-##### PS:Thread,Runable方法
-> 此方法是其他方法的基础和原理，任何有关线程操作的封装类和框架都是通过内部操作Thread对象来实现的。
-
 #### 线程和进程的关系：
+> * 
 
 #### 线程和进程在CPU硬件和系统进程管理中的表现形式：
+> * 
 
 #### 线程锁和数据同步：
+> *
 
 #### 线程和线程通信，进程和进程通信：
+> * 
 
 #### Android多线程编程的实际意义与应用：
+> * 
