--- a/Basic-Knowledge/Independent-module/多线程编程.md
+++ b/Basic-Knowledge/Independent-module/多线程编程.md
@@ -1,19 +1,25 @@
 ### 多线程编程的实现工具：
-> * Thread,Runable 此方法是其他方法的基础和原理，任何有关线程操作的封装类和框架都是通过内部操作Thread对象来实现的
-> * Asynctask [Asynctask的使用-自己的博客](http://www.cnblogs.com/thinfog/p/5648312.html)
-> * Handler,looper,MeasageQueue [Android异步消息机制-郭霖](http://blog.csdn.net/guolin_blog/article/details/9991569)
+> * *Thread,Runable* 此方法是其他方法的基础和原理，任何有关线程操作的封装类和框架都是通过内部操作Thread对象来实现的
+> * *Asynctask* [Asynctask的使用-自己的博客](http://www.cnblogs.com/thinfog/p/5648312.html)
+> * *Handler,looper,MeasageQueue* [Android异步消息机制-郭霖](http://blog.csdn.net/guolin_blog/article/details/9991569)
 
 #### 线程和进程的关系：
-> * 
+> * 进程是系统内存分配的最小单位，线程是程序执行的最小单位
+> * 一个进程代表系统为一个程序开辟内存空间，加载需要操作的代码，进程空间，数据空间，打开的文件等程序需要操作的相关区域和程序执行需求
+> * 一个进程可以包含一个或多个线程，每个线程会加载CPU的寄存器，堆栈，处理器资源，这些进程包含的所有线程都是分割系统为此进程开辟的操作空间和内存空间里，抢占式地在CPU里进行执行
 
 #### 线程和进程在CPU硬件和系统进程管理中的表现形式：
-> * 
+> * [线程和进程在操作系统中的表现形式](http://blog.csdn.net/luoweifu/article/details/46595285)
 
 #### 线程锁和数据同步：
-> *
+> * 
 
 #### 线程和线程通信，进程和进程通信：
-> * 
+> * 由于线程和线程之间不可见，进程和进程之间也不可见，但实际的程序设计中，又总会有这样的通信需求，于是Android中设计了一些类和运行机制，用于解决这类的问题
+> > * 线程和线程之间通信方法或途径：
+> > * 进程和进程之间通信方法或途径：
+> > * 线程和进程之间通信方法或途径：
 
 #### Android多线程编程的实际意义与应用：
-> * 
+> * Android开发中多线程的最重要的意义就是将执行程序任务和UI界面显示分割开来，保障UI中的显示一直流畅运行，需要长时间运行的数据操作，都不在UI线程中执行（因为如果在UI中运行数据操作，很容易出现UI线程阻塞，造成UI界面停止而无响应的情况）
+> * 在Android中，多线程除了解决了UI流畅性的问题，同样也需要解决跟其他的程序设计一样的线程调度和并发需求，这时的多线程设计基本等同于JAVA
