--- a/Basic-Knowledge/Independent-module/多线程编程.md
+++ b/Basic-Knowledge/Independent-module/多线程编程.md
@@ -12,14 +12,24 @@
 > * [线程和进程在操作系统中的表现形式](http://blog.csdn.net/luoweifu/article/details/46595285)
 
 #### 线程锁和数据同步：
-> * 
+> * [Java中synchronized关键字的使用](http://blog.csdn.net/luoweifu/article/details/46613015)
 
 #### 线程和线程通信，进程和进程通信：
 > * 由于线程和线程之间不可见，进程和进程之间也不可见，但实际的程序设计中，又总会有这样的通信需求，于是Android中设计了一些类和运行机制，用于解决这类的问题
 
-> > * 线程和线程之间通信方法或途径：
+> > * 线程和线程之间通信：（同一个应用程序APP之间的通信）
+> > > * 在同一个应用程序中，只要是全局变量或静态量就都能在程序的任一地方使用，但是由于不同线程之间的执行速度不同，数据同步和正确交互处理会有问题，能够保证程序的正常运行和逻辑实现，只要使用全局变量即能实现跨进程通信
+> > > * Context,Application,
 
-> > * 进程和进程之间通信方法或途径：
+
+> > * 进程和进程之间通信：（不同应用程序APP之间的通信）
+> > > * Activity：通过包名+类名启动action可以实现跨应用启动Activity，实现跨应用通信
+> > > * Content Provider：[自己的博客-Content Provider的简单使用](http://www.cnblogs.com/thinfog/p/5643395.html) 
+> > > * Broadcast：[自己的博客-Broadcast的简单使用](http://www.cnblogs.com/thinfog/p/5635004.html)
+> > > * Service：[自己的博客-Service的简单使用](http://www.cnblogs.com/thinfog/p/5634514.html)
+##### PS：不同应用程序APP之间的通信，本质上就是在系统中调配数据资源和运行资源，这都需要借助Binder对象来实现，而这种跨通信的服务叫AIDL服务。Binder对象是应用程序和系统运行之间沟通的桥梁，无论是应用启动或是跨越进程通信都需要借助Binder对象来实现。
+[Binder机制](https://github.com/GeniusVJR/LearningNotes/blob/master/Part1/Android/Binder%E6%9C%BA%E5%88%B6.md)
+
 
 > > * 线程和进程之间通信方法或途径：
 
