--- a/Basic-Knowledge/Independent-module/多线程编程.md
+++ b/Basic-Knowledge/Independent-module/多线程编程.md
@@ -27,11 +27,12 @@
 > > > * Content Provider：[自己的博客-Content Provider的简单使用](http://www.cnblogs.com/thinfog/p/5643395.html) 
 > > > * Broadcast：[自己的博客-Broadcast的简单使用](http://www.cnblogs.com/thinfog/p/5635004.html)
 > > > * Service：[自己的博客-Service的简单使用](http://www.cnblogs.com/thinfog/p/5634514.html)
-##### PS：不同应用程序APP之间的通信，本质上就是在系统中调配数据资源和运行资源，这都需要借助Binder对象来实现，而这种跨通信的服务叫AIDL服务。Binder对象是应用程序和系统运行之间沟通的桥梁，无论是应用启动或是跨越进程通信都需要借助Binder对象来实现。
-[Binder机制](https://github.com/GeniusVJR/LearningNotes/blob/master/Part1/Android/Binder%E6%9C%BA%E5%88%B6.md)
 
+##### PS：不同应用程序APP之间的通信，本质上就是在系统中调配数据资源和运行资源，这都需要借助Binder对象来实现，而这种跨进程通信的服务叫AIDL服务。Binder对象是应用程序和系统运行之间沟通的桥梁，无论是应用启动或是跨越进程通信都需要借助Binder对象来实现。
+> [Binder机制](https://github.com/GeniusVJR/LearningNotes/blob/master/Part1/Android/Binder%E6%9C%BA%E5%88%B6.md)
 
-> > * 线程和进程之间通信方法或途径：
+> > * 线程和进程之间通信：
+* 任何进程都是要线程去启动的，被线程启动后的进程也会有自己的线程存在，所以说线程和进程通信本质上是线程之间的通信，但不同于同一个应用之间的进程进行通信，因为不同进程中的两个线程拥有不同的内存空间和处理器分配空间，若要通信需要先将信息发送给系统，系统再找到对应的进程中的线程，此时通信的媒介是系统，而系统用来实现这个通信的工具是Binder。
 
 #### Android多线程编程的实际意义与应用：
 > * Android开发中多线程的最重要的意义就是将执行程序任务和UI界面显示分割开来，保障UI中的显示一直流畅运行，需要长时间运行的数据操作，都不在UI线程中执行（因为如果在UI中运行数据操作，很容易出现UI线程阻塞，造成UI界面停止而无响应的情况）
