--- a/Basic-Knowledge/Independent-module/多线程编程.md
+++ b/Basic-Knowledge/Independent-module/多线程编程.md
@@ -13,6 +13,21 @@
 
 #### 线程锁和数据同步：
 > * [Java中synchronized关键字的使用](http://blog.csdn.net/luoweifu/article/details/46613015)
+> *  synchronizedde的作用域：
+> > * 1.修饰一个代码块，被修饰的代码块称为同步语句块，其作用的范围是大括号{}括起来的代码，作用的对象是调用这个代码块的对象； 
+> > * 2.修饰一个方法，被修饰的方法称为同步方法，其作用的范围是整个方法，作用的对象是调用这个方法的对象；
+> > * 3.修饰一个静态的方法，其作用的范围是整个静态方法，作用的对象是这个类的所有对象；
+> > * 4.修饰一个类，其作用的范围是synchronized后面括号括起来的部分，作用的对象是这个类的所有对象
+###### 锁的心得记录：
+> > > 1.被同步锁修饰的代码块只有获得同步锁的程度段可以执行，而且同步代码块只会产生一把锁
+> > > 2.一个方法被同步锁修饰后，与同步代码块类似，只有获取方法同步锁的程度段可以执行它，同步方法也只能有一把锁与之关联
+> > > 3.静态方法属于类本身，一个类是独一无二的对象模板，所以同步锁修饰静态方法意味着无论这个类的对象实例有多少，静态方法的锁只有一把，所有对象的静态方法块操作是同步的。对比来说，同步锁只修饰类中的部分代码块和方法时，由于类创造了不同的实例对象而产生了各自的同步锁，从而失去了同步的作用。
+> > > 4.如果对一个类加上同步锁，那么这个类的所有对象都共享一把锁，都是强制同步的
+> > > 5.一个类中，如果同步锁仅仅修饰一部分代码块和方法，那么这个程序实例的非同步锁修饰模块是可以异步执行的。
+> > > 6.当不需要明确的对象作为同步对象，仅仅需要一个区域的代码保持同步时，可以创建一个byte[0]来作为同步的对象，byte[0]是最节省消耗的临时对象
+> > > 7.同步锁的效果不能继承，父类有同步块，子类继承父类后，在子类中调用是没有同步作用的，只用通过super指明调用父类的同步方法或再次用关键字修饰才能实现同步效果
+
+##### 锁的使用的注意事项：实现同步是要很大的系统开销作为代价的，甚至可能造成死锁，所以尽量避免无谓的同步控制
 
 #### 线程和线程通信，进程和进程通信：
 > * 由于线程和线程之间不可见，进程和进程之间也不可见，但实际的程序设计中，又总会有这样的通信需求，于是Android中设计了一些类和运行机制，用于解决这类的问题
