--- a/Basic-Knowledge/Independent-module/多线程编程.md
+++ b/Basic-Knowledge/Independent-module/多线程编程.md
@@ -12,13 +12,16 @@
 > * [线程和进程在操作系统中的表现形式](http://blog.csdn.net/luoweifu/article/details/46595285)
 
 #### 线程锁和数据同步：
+
 > * [Java中synchronized关键字的使用](http://blog.csdn.net/luoweifu/article/details/46613015)
 > *  synchronizedde的作用域：
 > > * 1.修饰一个代码块，被修饰的代码块称为同步语句块，其作用的范围是大括号{}括起来的代码，作用的对象是调用这个代码块的对象； 
 > > * 2.修饰一个方法，被修饰的方法称为同步方法，其作用的范围是整个方法，作用的对象是调用这个方法的对象；
 > > * 3.修饰一个静态的方法，其作用的范围是整个静态方法，作用的对象是这个类的所有对象；
 > > * 4.修饰一个类，其作用的范围是synchronized后面括号括起来的部分，作用的对象是这个类的所有对象
+
 ###### 锁的心得记录：
+
 > > > 1.被同步锁修饰的代码块只有获得同步锁的程度段可以执行，而且同步代码块只会产生一把锁
 > > > 2.一个方法被同步锁修饰后，与同步代码块类似，只有获取方法同步锁的程度段可以执行它，同步方法也只能有一把锁与之关联
 > > > 3.静态方法属于类本身，一个类是独一无二的对象模板，所以同步锁修饰静态方法意味着无论这个类的对象实例有多少，静态方法的锁只有一把，所有对象的静态方法块操作是同步的。对比来说，同步锁只修饰类中的部分代码块和方法时，由于类创造了不同的实例对象而产生了各自的同步锁，从而失去了同步的作用。
@@ -46,7 +49,7 @@
 ##### PS：不同应用程序APP之间的通信，本质上就是在系统中调配数据资源和运行资源，这都需要借助Binder对象来实现，而这种跨进程通信的服务叫AIDL服务。Binder对象是应用程序和系统运行之间沟通的桥梁，无论是应用启动或是跨越进程通信都需要借助Binder对象来实现。
 > [Binder机制](https://github.com/GeniusVJR/LearningNotes/blob/master/Part1/Android/Binder%E6%9C%BA%E5%88%B6.md)
 
-> > * 线程和进程之间通信：
+> >  线程和进程之间通信：
 * 任何进程都是要线程去启动的，被线程启动后的进程也会有自己的线程存在，所以说线程和进程通信本质上是线程之间的通信，但不同于同一个应用之间的进程进行通信，因为不同进程中的两个线程拥有不同的内存空间和处理器分配空间，也就是说不同的程序之间不存在全局变量或静态变量，唯一的“全局变量”就是系统，它们同时在一个系统环境下运行。若要通信需要先将信息发送给系统，系统再找到对应的进程中的线程，此时通信的媒介是系统，而系统用来实现这个通信的工具是Binder。
 
 #### Android多线程编程的实际意义与应用：
