--- a/Basic-Knowledge/Independent-module/多线程编程.md
+++ b/Basic-Knowledge/Independent-module/多线程编程.md
@@ -65,3 +65,10 @@
 #### Android多线程编程的实际意义与应用：
 > * Android开发中多线程的最重要的意义就是将执行程序任务和UI界面显示分割开来，保障UI中的显示一直流畅运行，需要长时间运行的数据操作，都不在UI线程中执行（因为如果在UI中运行数据操作，很容易出现UI线程阻塞，造成UI界面停止而无响应的情况）
 > * 在Android中，多线程除了解决了UI流畅性的问题，同样也需要解决跟其他的程序设计一样的线程调度和并发需求，这时的多线程设计基本等同于JAVA
+
+#### 线程管理优化-线程池
+##### [线程池程度剖析](http://www.cnblogs.com/devinzhang/p/3856200.html)
+> 线程池创立的原因：
+> * 线程需要经历开辟内存，执行代码，销毁线程这三个运行阶段，当线程数目多起来的时候，创建线程和销毁线程会占用相当的内存和CPU资源，创建线程池的初衷就是为了减少除了执行之外的消耗。
+> * 方法就是建立线程队列，将需要执行的线程添加进入线程队列里自动执行：每当需要有线程任务运行，就直接创建后添加进线程队列，线程池不断的从队列里取出线程执行，没有需要执行的线程则进进入等待
+> * 这样的做法，使得在执行任务的线程数目清晰明了并且可控制，压制了线程数目，也大大减少了每次开启线程都需要新建任务的操作，提升了线程执行的效率，也提升了编程效率
