--- a/Basic-Knowledge/Java-module/Advanced-Features/泛型机制和使用.md
+++ b/Basic-Knowledge/Java-module/Advanced-Features/泛型机制和使用.md
@@ -1,6 +1,12 @@
 ### 泛型的用途：
+> 所谓泛型，即通过参数化类型来实现在同一份代码上操作多种数据类型，泛型编程是一种编程范式，它利用“参数化类型”将类型抽象化，从而实现更为灵活的复用
+
+> 主要针对于需要操作多个对象，每个对象的操作逻辑或步骤完全一样，只是对象内的成员变量的类型不同的情况
 
 ### 泛型的特点：
+* 同一套代码逻辑，通过泛型可以操作不同类型的数据对象
+* 
+* 
 
 ### 泛型的使用
 
