--- a/Basic-Knowledge/Java-module/Advanced-Features/泛型机制和使用.md
+++ b/Basic-Knowledge/Java-module/Advanced-Features/泛型机制和使用.md
@@ -3,11 +3,22 @@
 
 > 主要针对于需要操作多个对象，每个对象的操作逻辑或步骤完全一样，只是对象内的成员变量的类型不同的情况
 
-### 泛型的特点：
-* 同一套代码逻辑，通过泛型可以操作不同类型的数据对象
-* 
-* 
+### 泛型的特点：即同一套代码逻辑，通过泛型可以操作不同类型的数据对象
 
 ### 泛型的使用
+> [Java泛型的使用 一- 圣骑士windy](http://www.cnblogs.com/mengdd/archive/2013/01/21/2869778.html)
+> [Java泛型的使用 二- 圣骑士windy](http://www.cnblogs.com/mengdd/archive/2013/01/21/2869861.html#3489228)
+> > 总结摘要：
+> > * 泛型就是将对象的class参数化和模糊化，统一以Object保存，在实际使用中在进行类型转化
+> > * 类型转化的方法：
+> > * 泛型可以被继承，也能用在接口中，用起来与实际的类型参数一致
+> > * 泛型类本身的范围就在继承关系中，在实际使用的时候常使用通配符来限定泛型类的范围
 
-### 使用泛型应当注意的点：
+> > > <? extends SomeClass>是一个限界通配符（boundedwildcard），？代表了一个未知的类型，并且它是SomeClass的子类，也可以是SomeClass本身
+
+> > > 这里面SomeClass是统配符的上界（upper bound of the wildcard）
+
+> > > 相应的也有限定下界的，使用关键字super, eg:<? super parentClass>,此时代表？它一定是parentClass的父类，
+起码在继承关系上要高于或等于parentClass
+
+
