--- a/Basic-Knowledge/Java-module/Advanced-Features/泛型机制和使用.md
+++ b/Basic-Knowledge/Java-module/Advanced-Features/泛型机制和使用.md
@@ -11,7 +11,7 @@
 > [Java泛型的使用 二- 圣骑士windy](http://www.cnblogs.com/mengdd/archive/2013/01/21/2869861.html#3489228)
 > > 总结摘要：
 > > * 泛型就是将对象的class参数化和模糊化，统一以Object保存，在实际使用中在进行类型转化
-> > * 类型转化的方法：
+> > * 类型转化的方法：Class T3 = obj.getClass(); 此时T3就被转化为obj的类，此方法可用在泛型处理的内部类型转换上
 > > * 泛型可以被继承，也能用在接口中，用起来与实际的类型参数一致
 > > * 泛型类本身的范围就在继承关系中，在实际使用的时候常使用通配符来限定泛型类的范围
 
