--- a/Basic-Knowledge/Java-module/Advanced-Features/泛型机制和使用.md
+++ b/Basic-Knowledge/Java-module/Advanced-Features/泛型机制和使用.md
@@ -12,6 +12,15 @@
 > > 总结摘要：
 > > * 泛型就是将对象的class参数化和模糊化，统一以Object保存，在实际使用中在进行类型转化
 > > * 类型转化的方法：Class T3 = obj.getClass() 可以获取obj的类型，然后设计类型比较相等这进行强制转化这样的操作来处理多种类型共用一套代码的情况
+> > * 判断类型的代码： 
+
+` Class T3 = super.t1.getClass();` 
+` String temp = new String();`  
+` if (T3.toString().equals(temp.getClass().toString())){`  
+`   Log.e("judge class","it's String class type");`  
+` }`  
+
+> > * 
 > > * 泛型可以被继承，也能用在接口中，用起来与实际的类型参数一致
 > > * 泛型类本身的范围就在继承关系中，在实际使用的时候常使用通配符来限定泛型类的范围
 
