--- a/Basic-Knowledge/Java-module/Advanced-Features/泛型机制和使用.md
+++ b/Basic-Knowledge/Java-module/Advanced-Features/泛型机制和使用.md
@@ -14,11 +14,11 @@
 > > * 类型转化的方法：Class T3 = obj.getClass() 可以获取obj的类型，然后设计类型比较相等这进行强制转化这样的操作来处理多种类型共用一套代码的情况
 > > * 判断类型的代码： 
 
-` Class T3 = super.t1.getClass();` 
-` String temp = new String();`  
-` if (T3.toString().equals(temp.getClass().toString())){`  
-`   Log.e("judge class","it's String class type");`  
-` }`  
+> > ` Class T3 = super.t1.getClass();` 
+> > ` String temp = new String();`  
+> > ` if (T3.toString().equals(temp.getClass().toString())){`  
+> > `   Log.e("judge class","it's String class type");`  
+> > ` }`  
 
 > > * 
 > > * 泛型可以被继承，也能用在接口中，用起来与实际的类型参数一致
