--- a/Basic-Knowledge/About-software-engineer/如何解决程序学习永无止境的问题.md
+++ b/Basic-Knowledge/About-software-engineer/如何解决程序学习永无止境的问题.md
@@ -5,7 +5,7 @@
 
 *立足自身情况，由一个刚入门级别的程序员，基础并不牢固，业务并不熟练，有太多没有见过，没有接触过的技术和知识，并且这些知识还在爆炸式的增长，这是一个几乎让人绝望的现状！
 
-*对于这种现状，个人经过整理了一下应对方法，用以在迷茫时指点自身。
+*对于这种现状，个人经过整理了一下应对方法，用以在迷茫时指点自身。 
 
 ——————————————————————————————————————————————————————————————————————————————————
 #### 以下仅是个人思索，无关一切
@@ -32,14 +32,29 @@
 
 > * 2.管理知识模块
 > > 个人将程序设计时需要用到的知识作如下分类：
-> > * level
-> > * level
-> > * level
-> > * level> > * level
+
+> > * level 1 随手可得/简单查阅可得                   （偏门知识点，简单实用的易遗忘的知识点）
+> > * level 0 行业基础知识/坚持学习可得               （JAVA基础，Android基础，Android高级组件）
+> > * level 2 具备基础知识的情况下/学习可得           （JVM原理，Android组件的具体实现原理和步骤）
+> > * level 3 具备基础知识的情况下/重新深度学习可得   （各种功能的原理和具体实现，框架，新技术）
+> > * level 4 易学难精                                （数据结构，设计模式）
+> > 经过以上的知识分级，我们可以很明显的看出新技术只是在原有的基础上做出的修改和优化，其本质还是基础知识，也就是说有基础知识才有能力去学习新技术，否则只是作为一个“程序员用户”而已
 
 > * 3.合理地制定学习策略
+> > 一再地说新技术的坏话，并不意味着不去学习和使用新技术，只是为了让自己清醒地认识新技术，学习新技术是保持进步和能力更进一步的有效手段
+> > 对于新技术我自己得出的解决办法就是：将学习新技术的时间成本控制在工作可接受的范围内或项目周期范围内。
+> > 意思就是虽然现在没有学习过该知识，但在其他方面的基础可以确保自己在较短的时间内掌握该技术，而做到这一要求的条件：基础知识/同类经验
 
+### 策略总结：放弃无畏地追赶并不成熟的新技术和新模块，从最基础和最普遍的层面学习程序设计
+> 具体在Android学习中的体现是：
+> > * 一级重点：JAVA基础和JVM，
+> > * 二级重点：Android常用组件和运行机制的原理和实现（特别注明Database，避免遗忘）
+> > * 三级重点：Android常用库的原理和实现
+> > * 四级重点: 项目经验
+> > * 五级重点: 行业动态关注和新技术研究
 
+### 总而言之：
+> 接下来的重点是：JVM，项目经验
 
 
 
