--- a/Basic-Knowledge/About-software-engineer/如何解决程序学习永无止境的问题.md
+++ b/Basic-Knowledge/About-software-engineer/如何解决程序学习永无止境的问题.md
@@ -1,13 +1,10 @@
 ## 对于程序的认知
-* 程序在使用中会不断的修改和完善，并开发出新的东西。
-
+* 程序在使用中会不断的修改和完善，并开发出新的东西
 * 在庞大的程序员基数下，这些新的东西会远远超过程序员个人的学习效率，天长日久，这种差距会渐渐形成一个需要不断努力追赶程序的发展速度的情况
-
 *立足自身情况，由一个刚入门级别的程序员，基础并不牢固，业务并不熟练，有太多没有见过，没有接触过的技术和知识，并且这些知识还在爆炸式的增长，这是一个几乎让人绝望的现状！
-
 *对于这种现状，个人经过整理了一下应对方法，用以在迷茫时指点自身。 
 
-——————————————————————————————————————————————————————————————————————————————————
+————————————————————————
 #### 以下仅是个人思索，无关一切
 
 ### 程序员或者说程序的工作是什么？
@@ -25,8 +22,11 @@
 #### 那么现在最大的问题就是：应当如何学习编程，使得自己在不断补充不足的基础的情况下还能跟的上不断在更新的模块？
 > * 1.正确认识和对待程序的知识
 > > 全球几百亿行代码，对于绝大部分人而言，仅仅认识一小半                                （学海无涯，做好本行）
+
 > > 新的东西发布出来，并不意味着他已经投入使用，相反，这些新发布的东西全是试验品        （新的内容并不重要，意味着风险和各种成本）
+
 > > 程序并不是够新够前沿才有价值，只要能够支撑良好的业务实现和稳定高速运行就是好程序    （程序的本质是实现业务逻辑）
+
 > > 程序设计是依靠个人的知识储备进行思维抽象和逻辑实现的过程，核心是将脑海里的知识运用   （程序就是运用基础的程序知识）
 
 
@@ -34,10 +34,15 @@
 > > 个人将程序设计时需要用到的知识作如下分类：
 
 > > * level 1 随手可得/简单查阅可得                   （偏门知识点，简单实用的易遗忘的知识点）
+
 > > * level 0 行业基础知识/坚持学习可得               （JAVA基础，Android基础，Android高级组件）
+
 > > * level 2 具备基础知识的情况下/学习可得           （JVM原理，Android组件的具体实现原理和步骤）
+
 > > * level 3 具备基础知识的情况下/重新深度学习可得   （各种功能的原理和具体实现，框架，新技术）
+
 > > * level 4 易学难精                                （数据结构，设计模式）
+
 > > 经过以上的知识分级，我们可以很明显的看出新技术只是在原有的基础上做出的修改和优化，其本质还是基础知识，也就是说有基础知识才有能力去学习新技术，否则只是作为一个“程序员用户”而已
 
 > * 3.合理地制定学习策略
@@ -47,10 +52,15 @@
 
 ### 策略总结：放弃无畏地追赶并不成熟的新技术和新模块，从最基础和最普遍的层面学习程序设计
 > 具体在Android学习中的体现是：
+
 > > * 一级重点：JAVA基础和JVM，
+
 > > * 二级重点：Android常用组件和运行机制的原理和实现（特别注明Database，避免遗忘）
+
 > > * 三级重点：Android常用库的原理和实现
+
 > > * 四级重点: 项目经验
+
 > > * 五级重点: 行业动态关注和新技术研究
 
 ### 总而言之：
