Update and rename 如何解决程序学习永无止境的问题.md to 如何应对技术更新太快，几乎无法追赶.md

--- a/Basic-Knowledge/About-software-engineer/如何应对技术更新太快，几乎无法追赶.md
+++ b/Basic-Knowledge/About-software-engineer/如何应对技术更新太快，几乎无法追赶.md
@@ -1,12 +1,9 @@
 ## 对于程序的认知
-* 程序在使用中会不断的修改和完善，并开发出新的东西
-* 在庞大的程序员基数下，这些新的东西会远远超过程序员个人的学习效率，天长日久，这种差距会渐渐形成一个需要不断努力追赶程序的发展速度的情况
- 
 
-*立足自身情况，由一个刚入门级别的程序员，基础并不牢固，业务并不熟练，有太多没有见过，没有接触过的技术和知识，并且这些知识还在爆炸式的增长，这是一个几乎让人绝望的现状！
-
-
-*对于这种现状，个人经过整理了一下应对方法，用以在迷茫时指点自身。 
+> * 程序在使用中会不断的修改和完善，并开发出新的东西
+> * 在庞大的程序员基数下，这些新的东西会远远超过程序员个人的学习效率，天长日久，这种差距会渐渐形成一个需要不断努力追赶程序的发展速度的情况
+> *立足自身情况，由一个刚入门级别的程序员，基础并不牢固，业务并不熟练，有太多没有见过，没有接触过的技术和知识，并且这些知识还在爆炸式的增长，这是一个几乎让人绝望的现状！
+> *对于这种现状，个人经过整理了一下应对方法，用以在迷茫时指点自身。 
 
 ————————————————————————
 #### 以下仅是个人思索，无关一切
