--- a/Basic-Knowledge/About-software-engineer/如何应对技术更新太快，几乎无法追赶.md
+++ b/Basic-Knowledge/About-software-engineer/如何应对技术更新太快，几乎无法追赶.md
@@ -1,10 +1,10 @@
 ## 对于程序的认知
 
 > * 程序在使用中会不断的修改和完善，并开发出新的东西
-> * 在庞大的程序员基数下，这些新的东西会远远超过程序员个人的学习效率，天长日久，这种差距会渐渐形成一个需要不断努力追赶程序的发展速度的情况
-> *立足自身情况，由一个刚入门级别的程序员，基础并不牢固，业务并不熟练，有太多没有见过，没有接触过的技术和知识，并且这些知识还在爆炸式的增长，这是一个几乎让人绝望的现状！
-> *对于这种现状，个人经过整理了一下应对方法，用以在迷茫时指点自身。 
+> * 在庞大的程序员基数下，这些新的东西会远远超过程序员个人的学习效率，这种差距会渐渐无法弥补
+> * 立足自身情况，由一个刚入门级别的程序员，基础并不牢固，太多的新技术和知识，并且这些知识还在爆炸式的增长
 
+###对于这种现状，个人经过整理了一下应对方法，用以在迷茫时指点自身。 
 ————————————————————————
 #### 以下仅是个人思索，无关一切
 
@@ -47,6 +47,7 @@
 > 经过以上的知识分级，我们可以很明显的看出新技术只是在原有的基础上做出的修改和优化，其本质还是基础知识，也就是说有基础知识才有能力去学习新技术，否则只是作为一个“程序员用户”而已
 
 * 3.合理地制定学习策略
+
 > 一再地说新技术的坏话，并不意味着不去学习和使用新技术，只是为了让自己清醒地认识新技术，学习新技术是保持进步和能力更进一步的有效手段
 
 > 对于新技术我自己得出的解决办法就是：将学习新技术的时间成本控制在工作可接受的范围内或项目周期范围内。
@@ -56,7 +57,7 @@
 ### 策略总结：放弃无畏地追赶并不成熟的新技术和新模块，从最基础和最普遍的层面学习程序设计
 
 #### 具体在Android学习中的体现是：
-* 一级重点：JAVA基础和JVM，
+> > * 一级重点：JAVA基础和JVM
 
 > > * 二级重点：Android常用组件和运行机制的原理和实现（特别注明Database，避免遗忘）
 
