--- a/Basic-Knowledge/About-software-engineer/如何应对技术更新太快，几乎无法追赶.md
+++ b/Basic-Knowledge/About-software-engineer/如何应对技术更新太快，几乎无法追赶.md
@@ -1,4 +1,4 @@
-## 对于程序的认知
+## 关于技术更新
 
 > * 程序在使用中会不断的修改和完善，并开发出新的东西
 > * 在庞大的程序员基数下，这些新的东西会远远超过程序员个人的学习效率，这种差距会渐渐无法弥补
@@ -22,6 +22,7 @@
 
 #### 那么现在最大的问题就是：应当如何学习编程，使得自己在不断补充不足的基础的情况下还能跟的上不断在更新的模块？
 * 1.正确认识和对待程序的知识
+
 > 全球几百亿行代码，对于绝大部分人而言，仅仅认识一小半                                （学海无涯，做好本行）
 
 > 新的东西发布出来，并不意味着他已经投入使用，相反，这些新发布的东西全是试验品        （新的内容并不重要，意味着风险和各种成本）
@@ -54,7 +55,7 @@
 
 > 意思就是虽然现在没有学习过该知识，但在其他方面的基础可以确保自己在较短的时间内掌握该技术，而做到这一要求的条件：基础知识/同类经验
 
-### 策略总结：放弃无畏地追赶并不成熟的新技术和新模块，从最基础和最普遍的层面学习程序设计
+### 策略总结：放弃漫无目的地追赶并不成熟的新技术和新模块，从最基础和最普遍的层面学习程序设计
 
 #### 具体在Android学习中的体现是：
 > > * 一级重点：JAVA基础和JVM
