--- a/Basic-Knowledge/About-software-engineer/如何应对技术更新太快，几乎无法追赶.md
+++ b/Basic-Knowledge/About-software-engineer/如何应对技术更新太快，几乎无法追赶.md
@@ -4,7 +4,7 @@
 > * 在庞大的程序员基数下，这些新的东西会远远超过程序员个人的学习效率，这种差距会渐渐无法弥补
 > * 立足自身情况，由一个刚入门级别的程序员，基础并不牢固，太多的新技术和知识，并且这些知识还在爆炸式的增长
 
-### 对于这种现状，个人经过思考写在此处，用以备忘
+##### 对于这种现状，个人经过思考写在此处，用以备忘
 ————————————————————————
 #### 以下仅是个人思索，无关一切
 
