--- a/Basic-Knowledge/Independent-module/多线程编程.md
+++ b/Basic-Knowledge/Independent-module/多线程编程.md
@@ -45,22 +45,22 @@
 #### 线程和线程通信，进程和进程通信：
 * 由于线程和线程之间不可见，进程和进程之间也不可见，但实际的程序设计中，又总会有这样的通信需求，于是Android中设计了一些类和运行机制，用于解决这类的问题
 
-> * 线程和线程之间通信：（同一个应用程序APP之间的通信）
-> > * 在同一个应用程序中，只要是全局变量或静态量就都能在程序的任一地方使用，但是由于不同线程之间的执行速度不同，数据同步和正确交互处理会有问题，能够保证程序的正常运行和逻辑实现，只要使用全局变量即能实现跨进程通信
-> > * Context,Application,
+* 线程和线程之间通信：（同一个应用程序APP之间的通信）
+> * 在同一个应用程序中，只要是全局变量或静态量就都能在程序的任一地方使用，但是由于不同线程之间的执行速度不同，数据同步和正确交互处理会有问题，能够保证程序的正常运行和逻辑实现，只要使用全局变量即能实现跨进程通信
+> * Context,Application,
 
 
-> * 进程和进程之间通信：（不同应用程序APP之间的通信）
-> > * Activity：通过包名+类名启动action可以实现跨应用启动Activity，实现跨应用通信
-> > * Content Provider：[自己的博客-Content Provider的简单使用](http://www.cnblogs.com/thinfog/p/5643395.html) 
-> > * Broadcast：[自己的博客-Broadcast的简单使用](http://www.cnblogs.com/thinfog/p/5635004.html)
-> > * Service：[自己的博客-Service的简单使用](http://www.cnblogs.com/thinfog/p/5634514.html)
+* 进程和进程之间通信：（不同应用程序APP之间的通信）
+> * Activity：通过包名+类名启动action可以实现跨应用启动Activity，实现跨应用通信
+> * Content Provider：[自己的博客-Content Provider的简单使用](http://www.cnblogs.com/thinfog/p/5643395.html) 
+> * Broadcast：[自己的博客-Broadcast的简单使用](http://www.cnblogs.com/thinfog/p/5635004.html)
+> * Service：[自己的博客-Service的简单使用](http://www.cnblogs.com/thinfog/p/5634514.html)
 
 ##### PS：不同应用程序APP之间的通信，本质上就是在系统中调配数据资源和运行资源，这都需要借助Binder对象来实现，而这种跨进程通信的服务叫AIDL服务。Binder对象是应用程序和系统运行之间沟通的桥梁，无论是应用启动或是跨越进程通信都需要借助Binder对象来实现。
 > [Binder机制](https://github.com/GeniusVJR/LearningNotes/blob/master/Part1/Android/Binder%E6%9C%BA%E5%88%B6.md)
 
-> >  * 线程和进程之间通信：
-* 任何进程都是要线程去启动的，被线程启动后的进程也会有自己的线程存在，所以说线程和进程通信本质上是线程之间的通信，但不同于同一个应用之间的进程进行通信，因为不同进程中的两个线程拥有不同的内存空间和处理器分配空间，也就是说不同的程序之间不存在全局变量或静态变量，唯一的“全局变量”就是系统，它们同时在一个系统环境下运行。若要通信需要先将信息发送给系统，系统再找到对应的进程中的线程，此时通信的媒介是系统，而系统用来实现这个通信的工具是Binder。
+* 线程和进程之间通信：
+> * 任何进程都是要线程去启动的，被线程启动后的进程也会有自己的线程存在，所以说线程和进程通信本质上是线程之间的通信，但不同于同一个应用之间的进程进行通信，因为不同进程中的两个线程拥有不同的内存空间和处理器分配空间，也就是说不同的程序之间不存在全局变量或静态变量，唯一的“全局变量”就是系统，它们同时在一个系统环境下运行。若要通信需要先将信息发送给系统，系统再找到对应的进程中的线程，此时通信的媒介是系统，而系统用来实现这个通信的工具是Binder。
 
 #### Android多线程编程的实际意义与应用：
 > * Android开发中多线程的最重要的意义就是将执行程序任务和UI界面显示分割开来，保障UI中的显示一直流畅运行，需要长时间运行的数据操作，都不在UI线程中执行（因为如果在UI中运行数据操作，很容易出现UI线程阻塞，造成UI界面停止而无响应的情况）
