--- a/Basic-Knowledge/Basic-of-Software/Algorithm/排序算法.md
+++ b/Basic-Knowledge/Basic-of-Software/Algorithm/排序算法.md
@@ -1,6 +1,18 @@
 ## 排序算法总结：
-* 
-* 
-* 
-* 
-* 
+* 选择排序
+* 插入排序
+* 快速排序
+* 归并排序
+* 堆排序
+* 基数排序（分LSD和MSD两种）
+* STD::SORT(c++ STL)
+* STD::STABLE SORT(c++ STL)
+* 希尔排序
+* 冒泡排序
+* 鸡尾酒排序（双向冒泡排序）
+* gnome排序（地精排序）
+* bitnioc（双调排序）
+* Bogo排序（猴子排序）
+
+### [排序执行的具体过程视频](http://v.youku.com/v_show/id_XNTkwNzI5OTIw.html)
+
