--- a/Basic-Knowledge/Basic-of-Software/Algorithm/排序算法.md
+++ b/Basic-Knowledge/Basic-of-Software/Algorithm/排序算法.md
@@ -14,7 +14,7 @@
 > 1.在要排序的数据中选一个大小居中的值为标准，比他大的放右边，小的放左边，将数据分成两组，
 > 2.再对左右的两组数据重复第一步骤，所得的数据模块也重复第一步骤，直至完成
 > 效果示意图：
-[](http://jbcdn2.b0.upaiyun.com/2012/01/Visual-and-intuitive-feel-of-7-common-sorting-algorithms.gif)
+[示意图](http://jbcdn2.b0.upaiyun.com/2012/01/Visual-and-intuitive-feel-of-7-common-sorting-algorithms.gif)
 
 * 归并排序
 >
