--- a/Basic-Knowledge/Basic-of-Software/Algorithm/排序算法.md
+++ b/Basic-Knowledge/Basic-of-Software/Algorithm/排序算法.md
@@ -1,3 +1,5 @@
+#### [REF:视觉直观感受 7 种常用的排序算法](http://blog.jobbole.com/11745/)
+
 ## 时间时间复杂度和空间复杂度：用来衡量算法优劣的依据
 * 时间复杂度：执行算法所需要的计算次数
 * 空间复杂度：执行这个算法所需要的内存空间
@@ -6,6 +8,7 @@
 ## 排序算法总结：
 * 选择排序
 
+![](http://jbcdn2.b0.upaiyun.com/2012/01/Visual-and-intuitive-feel-of-7-common-sorting-algorithms4.gif)
 
 * 插入排序
 >
@@ -19,9 +22,11 @@
 
 * 归并排序
 >
+![](http://jbcdn2.b0.upaiyun.com/2012/01/Visual-and-intuitive-feel-of-7-common-sorting-algorithms2.gif)
 
 * 堆排序
 >
+![](http://jbcdn2.b0.upaiyun.com/2012/01/Visual-and-intuitive-feel-of-7-common-sorting-algorithms3.gif)
 
 * 基数排序（分LSD和MSD两种）
 >
@@ -30,9 +35,11 @@
 * STD::STABLE SORT(c++ STL)
 * 希尔排序
 >
+![](http://jbcdn2.b0.upaiyun.com/2012/01/Visual-and-intuitive-feel-of-7-common-sorting-algorithms6.gif)
 
 * 冒泡排序
 >
+![](http://jbcdn2.b0.upaiyun.com/2012/01/Visual-and-intuitive-feel-of-7-common-sorting-algorithms5.gif)
 
 * 鸡尾酒排序（双向冒泡排序）
 > 
