--- a/Basic-Knowledge/Basic-of-Software/Algorithm/排序算法.md
+++ b/Basic-Knowledge/Basic-of-Software/Algorithm/排序算法.md
@@ -7,11 +7,13 @@
 
 ## 排序算法总结：
 * 选择排序
-
+> 先遍历整个数组找到最小的放在最前面，再寻找第二小的放在第二位，依次类推，直到所有数据被操作一遍
 ![](http://jbcdn2.b0.upaiyun.com/2012/01/Visual-and-intuitive-feel-of-7-common-sorting-algorithms4.gif)
 
 * 插入排序
->
+> 1.先取第一个元素，认为这个元素就是一个“已经排序的数组”，
+> 2.将第二个元素在“已经排序的数组”里面找到合适的位置插入（大在后，小在前），再将第三个元素插入合适的位置，
+> 3.依次类推，直到所有的数据都被放入“已经排序的数组”，排序完毕
 
 * 快速排序
 > 1.在要排序的数据中选一个大小居中的值为标准，比他大的放右边，小的放左边，将数据分成两组，
@@ -21,7 +23,11 @@
 
 
 * 归并排序
->
+> 1.根据数据总体的容量，选择将总体数据分成N个容量相等的子数据模块，
+> 2.依次选取第1，2，两个子模块，对子模块内部数据各自先进性排序，再将排序后的两个子模块合并，
+> 合并时设置两个子模块最小值为起始点（指针），小的放前面，依次后移起始点的位置，完成两个子模块的合并排序，
+> 3.在3，4子模块重复2步骤，然后将3，4合并后的模块与1，2生成的模块再次合并，
+> 4.依次类推···
 ![](http://jbcdn2.b0.upaiyun.com/2012/01/Visual-and-intuitive-feel-of-7-common-sorting-algorithms2.gif)
 
 * 堆排序
