--- a/Basic-Knowledge/Basic-of-Software/Algorithm/排序算法.md
+++ b/Basic-Knowledge/Basic-of-Software/Algorithm/排序算法.md
@@ -8,6 +8,7 @@
 ## 排序算法总结：
 * 选择排序
 > 先遍历整个数组找到最小的放在最前面，再寻找第二小的放在第二位，依次类推，直到所有数据被操作一遍
+
 ![](http://jbcdn2.b0.upaiyun.com/2012/01/Visual-and-intuitive-feel-of-7-common-sorting-algorithms4.gif)
 
 * 插入排序
@@ -28,10 +29,14 @@
 > 合并时设置两个子模块最小值为起始点（指针），小的放前面，依次后移起始点的位置，完成两个子模块的合并排序，
 > 3.在3，4子模块重复2步骤，然后将3，4合并后的模块与1，2生成的模块再次合并，
 > 4.依次类推···
+
 ![](http://jbcdn2.b0.upaiyun.com/2012/01/Visual-and-intuitive-feel-of-7-common-sorting-algorithms2.gif)
 
 * 堆排序
->
+> 堆是一个近似完全二叉树的结构，并同时满足堆性质：即子结点的键值或索引总是小于（或者大于）它的父节点，
+> 也就是说堆排序是根据二叉树的特性产生的算法，它并不是一个普适性的算法
+> 二叉树形式的数据结构，本身遵循了一定的大小规则，可以认为二叉树的数据结构是一个另一种形式sorted data,而堆排序就是将二叉树转化成数组形式
+
 ![](http://jbcdn2.b0.upaiyun.com/2012/01/Visual-and-intuitive-feel-of-7-common-sorting-algorithms3.gif)
 
 * 基数排序（分LSD和MSD两种）
