--- a/Basic-Knowledge/Basic-of-Software/Algorithm/排序算法.md
+++ b/Basic-Knowledge/Basic-of-Software/Algorithm/排序算法.md
@@ -20,6 +20,24 @@
 
 > 3.依次类推，直到所有的数据都被放入“已经排序的数组”，排序完毕
 
+* 希尔排序
+
+> 插入排序在已经排序过的数组中执行起来相当优秀，但一个完全没有排序的数组却表现不好，因为插入排序每次只能将数据量移动一位
+
+> 希尔排序就是针对插入排序的问题得出的改进算法，但是这是一个不稳定的算法
+
+> 1.先将要排序的一组数按某个间距d分成若干组，每组中记录的数据的下标相差d,对每组中元素进行排序，
+
+> 2.然后再用一个小一点间距再执行一次，在每组中再进行排序。
+
+> 3.当增量减到1时，整个要排序的数被分成一组，排序完成。
+
+> ps:这种方法的优点就是比较较远距离的两个数的大小，然后排序，可以节省很多次的比较和交换操作，大大提升程序效率
+
+![示例图](http://h.hiphotos.baidu.com/baike/c0%3Dbaike80%2C5%2C5%2C80%2C26/sign=64f173189145d688b70fbaf6c5ab167b/b3fb43166d224f4a87a8c9380af790529822d1ec.jpg)
+
+![](http://jbcdn2.b0.upaiyun.com/2012/01/Visual-and-intuitive-feel-of-7-common-sorting-algorithms6.gif)
+
 * 快速排序
 
 > 1.在要排序的数据中选一个大小居中的值为标准，比他大的放右边，小的放左边，将数据分成两组，
@@ -60,12 +78,12 @@
 
 * STD::SORT(c++ STL)
 * STD::STABLE SORT(c++ STL)
-* 希尔排序
->
-![](http://jbcdn2.b0.upaiyun.com/2012/01/Visual-and-intuitive-feel-of-7-common-sorting-algorithms6.gif)
+
 
 * 冒泡排序
->
+
+> 每次都从第一个元素开始，依次与后面的元素比较，比后面的元素大就向后移动，小就进入下一轮比较，依次类推
+
 ![](http://jbcdn2.b0.upaiyun.com/2012/01/Visual-and-intuitive-feel-of-7-common-sorting-algorithms5.gif)
 
 * 鸡尾酒排序（双向冒泡排序）
@@ -79,7 +97,7 @@
 
 * Bogo排序（猴子排序）
 
-> 在很久很久以前，有人讲，让许许多多的猴子操作打字机，一直打字，当猴子足够多，时间足够长的时候，猴子即使完全不认字，他们也一定打印出了莎士比亚的文学作品内容，表达了程序员对 **乱枪打鸟算法** 的深刻理解！老夫简直目瞪口呆！
+> 在很久很久以前，有一个伟大的程序员讲，让许许多多的猴子操作打字机，一直打字，当猴子足够多，时间足够长的时候，猴子即使完全不认字，他们也一定打印出了莎士比亚的文学作品内容，表达了程序员对 **乱枪打鸟算法** 的深刻理解！老夫简直目瞪口呆！
 
 > 这种排序的具体操作方式就是，先随机打乱数组，随机排列一遍，检测是否符合排序要求，检测不符合，继续打乱继续随机排列，
 
