--- a/Basic-Knowledge/Basic-of-Software/Algorithm/排序算法.md
+++ b/Basic-Knowledge/Basic-of-Software/Algorithm/排序算法.md
@@ -1,4 +1,4 @@
-#### [REF:视觉直观感受 7 种常用的排序算法](http://blog.jobbole.com/11745/)
+### [REF:视觉直观感受 7 种常用的排序算法](http://blog.jobbole.com/11745/)
 
 ## 时间时间复杂度和空间复杂度：用来衡量算法优劣的依据
 * 时间复杂度：执行算法所需要的计算次数
@@ -36,7 +36,7 @@
 
 ![示例图](http://h.hiphotos.baidu.com/baike/c0%3Dbaike80%2C5%2C5%2C80%2C26/sign=64f173189145d688b70fbaf6c5ab167b/b3fb43166d224f4a87a8c9380af790529822d1ec.jpg)
 
-![](http://jbcdn2.b0.upaiyun.com/2012/01/Visual-and-intuitive-feel-of-7-common-sorting-algorithms6.gif)
+![数据变化情况示意图](http://jbcdn2.b0.upaiyun.com/2012/01/Visual-and-intuitive-feel-of-7-common-sorting-algorithms6.gif)
 
 * 快速排序
 
@@ -73,12 +73,6 @@
 
 ![](http://jbcdn2.b0.upaiyun.com/2012/01/Visual-and-intuitive-feel-of-7-common-sorting-algorithms3.gif)
 
-* 基数排序（分LSD和MSD两种）
->
-
-* STD::SORT(c++ STL)
-* STD::STABLE SORT(c++ STL)
-
 
 * 冒泡排序
 
@@ -87,13 +81,25 @@
 ![](http://jbcdn2.b0.upaiyun.com/2012/01/Visual-and-intuitive-feel-of-7-common-sorting-algorithms5.gif)
 
 * 鸡尾酒排序（双向冒泡排序）
-> 
+
+> 1.左右两边同时开始，一方比较小的放左边，一方比较大的放右边，
+
+> 2.按照冒泡的执行步骤，循环执行，直至排序完成
+
+> ps:对比冒泡可以获得稍微高一点的效率，因为一次循环执行了两次操作，但提升有限
 
 * gnome排序（地精排序）
->
+> 
 
 * bitnioc（双调排序）
 >
+
+* 基数排序（分LSD和MSD两种）
+>
+
+* STD::SORT(c++ STL)
+* STD::STABLE SORT(c++ STL)
+
 
 * Bogo排序（猴子排序）
 
