--- a/Basic-Knowledge/Basic-of-Software/Algorithm/排序算法.md
+++ b/Basic-Knowledge/Basic-of-Software/Algorithm/排序算法.md
@@ -89,7 +89,20 @@
 > ps:对比冒泡可以获得稍微高一点的效率，因为一次循环执行了两次操作，但提升有限
 
 * gnome排序（地精排序）
-> 
+
+> 号称最简单的排序，只有一层循环。
+
+> 设置遍历数组的索引值，默认往前冒泡,一旦遇到冒泡的情况发生就往回冒,直到索引值走完整个数据空间（int i=0，一个数组10个数，但i<10不满足时，跳出循环）
+
+> 具体的执行步骤是：
+
+> 1.从第一个数开始执行冒泡操作，
+
+> 2.当发生了交换位置的操作，则索引值-1，若不发生交换则索引值+1，
+
+> 其效果就是将交换后的数据作为新的冒泡起始点，若是大的放右边的冒泡方式，表现结果就是不断的将小的数往左边放，放在左边的数又开始执行冒泡操作
+
+> PS：这个算法的好处就是能够充分体现CPU的效率，因为只有一次循环，一直在执行，不同效率的CPU可以得到直观的体现
 
 * bitnioc（双调排序）
 >
