--- a/Basic-Knowledge/Basic-of-Software/Algorithm/排序算法.md
+++ b/Basic-Knowledge/Basic-of-Software/Algorithm/排序算法.md
@@ -6,7 +6,7 @@
 * 
 
 ## 排序算法总结：
-* ### 选择排序
+### 选择排序
  
 > 先遍历整个数组找到最小的放在最前面，再寻找第二小的放在第二位，依次类推，直到所有数据被操作一遍
 
@@ -14,7 +14,7 @@
 
 
 
-* ### 插入排序
+### 插入排序
 
 > 1.先取第一个元素，认为这个元素就是一个“已经排序的数组”，
 
@@ -24,7 +24,7 @@
 
 
 
-* ### 希尔排序
+### 希尔排序
 
 > 插入排序在已经排序过的数组中执行起来相当优秀，但一个完全没有排序的数组却表现不好，因为插入排序每次只能将数据量移动一位
 
@@ -44,7 +44,7 @@
 
 
 
-* ### 快速排序
+### 快速排序
 
 > 1.在要排序的数据中选一个大小居中的值为标准，比他大的放右边，小的放左边，将数据分成两组，
 
@@ -57,7 +57,7 @@
 
 
 
-* ### 归并排序
+### 归并排序
 
 > 1.根据数据总体的容量，选择将总体数据分成N个容量相等的子数据模块，
 
@@ -74,7 +74,7 @@
 
 
 
-* ### 堆排序
+### 堆排序
 
 > 堆是一个近似完全二叉树的结构，并同时满足堆性质：即子结点的键值或索引总是小于（或者大于）它的父节点，
 
@@ -86,7 +86,7 @@
 
 
 
-* ### 冒泡排序
+### 冒泡排序
 
 > 每次都从第一个元素开始，依次与后面的元素比较，比后面的元素大就向后移动，小就进入下一轮比较，依次类推
 
@@ -95,7 +95,7 @@
 
 
 
-* ### 鸡尾酒排序（双向冒泡排序）
+### 鸡尾酒排序（双向冒泡排序）
 
 > 1.左右两边同时开始，一方比较小的放左边，一方比较大的放右边，
 
@@ -105,7 +105,7 @@
 
 
 
-* ### gnome排序（地精排序）
+### gnome排序（地精排序）
 
 > 号称最简单的排序，只有一层循环。
 
@@ -123,18 +123,18 @@
 
 
 
-* ### bitnioc（双调排序）
+### bitnioc（双调排序）
 >
 
-* ### 基数排序（分LSD和MSD两种）
+### 基数排序（分LSD和MSD两种）
 >
 
-* ### STD::SORT(c++ STL)
-* ### STD::STABLE SORT(c++ STL)
+### STD::SORT(c++ STL)
+### STD::STABLE SORT(c++ STL)
 
 
 
-* ### Bogo排序（猴子排序）
+### Bogo排序（猴子排序）
 
 > 在很久很久以前，有一个伟大的程序员讲，让许许多多的猴子操作打字机，一直打字，当猴子足够多，时间足够长的时候，猴子即使完全不认字，他们也一定打印出了莎士比亚的文学作品内容，表达了程序员对 **乱枪打鸟算法** 的深刻理解！老夫简直目瞪口呆！
 
