--- a/Basic-Knowledge/Basic-of-Software/Algorithm/排序算法.md
+++ b/Basic-Knowledge/Basic-of-Software/Algorithm/排序算法.md
@@ -144,7 +144,7 @@
 
 > #### 【目瞪口呆.jpg】
 
-> ##### PS：老子一本正经学代码，严肃的很，结果学到了这个，我感受到了深深的恶意！！！！！！！！！！！
+> ##### PS：老夫一本正经学代码，严肃的很，结果学到了这个，我感受到了深深的恶意！！！！！！！！！！！
 
 ### [排序执行的具体过程视频](http://v.youku.com/v_show/id_XNTkwNzI5OTIw.html)
 > ps:这是一个直观体现排序过程从数据变动的视频，相当清晰明白的表现了数据的变化情况，算法性能
