--- a/Basic-Knowledge/About-software-engineer/如何解决知识不用很快就忘的问题.md
+++ b/Basic-Knowledge/About-software-engineer/如何解决知识不用很快就忘的问题.md
@@ -11,4 +11,4 @@
 ## 好处：
 * 加深细节理解：代码写出来不一定就是都理解了，但是能写成技术博客的形式，那么一定是从所有的步骤和环节对自己的整个经历剖析了一遍，加深了自己的理解和感悟
 * 复习效率超高：技术博客几乎完全记录下了自己的学习过程，自己阅读的时候，会相当快速的找回当初的成果
-* 利于整个行业的发展：人力有限，再简单的事情都需要有先行者摸索，人人都公开技术博客的话，整个行业的节奏和工作难度会指数下降，人数越多越明显
+* 利于整个行业的发展：人力有限，再简单的事情都需要有先行者摸索，形成通过技术博客分享的氛围，可以将必要的知识普及，带动整个行业的节奏和工作难度指数下降，这种效果人数越多越明显
