--- a/QuestionAndSolution/恢复误删除的源代码文件.md
+++ b/QuestionAndSolution/恢复误删除的源代码文件.md
@@ -1,1 +1,12 @@
+## 解决办法：
+* 解决的原理：代码编写中，Android studio在产生文件变动时，会在磁盘上自动保存相关的变动历史纪录，通过该记录来实现代码恢复
+* 如果连相关的本地记录都丢失了，则只能通过磁盘数据恢复技术来实现了，相对困难且恢复成功率与个人水平直接相关
 
+
+* 本地记录存在的情况：
+
+> * file -> locallHistory -> 选择想要恢复的时间点，恢复到删除前的状态
+
+* 本地记录不存在：
+
+> * 使用数据恢复软件，恢复硬盘内容，定向选择恢复.java,.xml等对应的文件格式，可提高成功率
